src/ui/board/snapshots/swamp__ui__board__screens__board_40.snap
---
source: src/ui/board/screens.rs
expression: narrow
---
swamp board              observed 4s ago
2 running · 1 stuck · 1 queued · ~$0.43
────────────────────────────────────────
  ◆ brain      orchestrating       4m12s

  ▾ #1 · 2 running · 1 blocked · ~$0.34
    ⠋ 9g5f01   add pagination to…  3m10s
    ⠙ 9g5f09·2 backfill the user…  2m48s
▌   ⏸ 9g5f04   rebuild the index   3m20s
      until 22:54 · main at capacity +1
    · 9g5f0a   write the changel…  3m20s
    ✔ 9g5f05   add the /users ro…  2m10s

  recent
  ▸ #2 · 1 rejected · max_nodes_per_run
────────────────────────────────────────
  ● main       2/2  5h  71%  7d  32%
  ◐ alt        1/-  5h  93%  7d  54%
  ✘ codex-main 0/2  cooling until 23:20
────────────────────────────────────────
  9g5f04 blocked · until 22:54 (in 38m)
    main  at capacity (2/2)
    alt   quota stop (93%)


↑↓ select · k cancel · ? keys · q quit
