src/ui/board/snapshots/swamp__ui__board__screens__board_85.snap
---
source: src/ui/board/screens.rs
expression: "draw(&b, 85)"
---
swamp board                 2 running · 1 stuck · 1 queued · ~$0.43 · observed 4s ago
─────────────────────────────────────────────────────────────────────────────────────
  ◆ brain      orchestrating                                  main      4m12s  ~$0.09

  ▾ #1 9g5f18 · 5 tasks · 2 running · 1 blocked · 1 queued · 1 done     3m20s  ~$0.34
    ⠋ 9g5f01   add pagination to /users                       main      3m10s  ~$0.08
▌   ⠙ 9g5f09·2 backfill the users index                       alt       2m48s  ~$0.22
    ⏸ 9g5f04   rebuild the index                                        3m20s
      until 22:54 · main at capacity · alt quota stop
    · 9g5f0a   write the changelog                                      3m20s
    ✔ 9g5f05   add the /users route                           main      2m10s  ~$0.04

  recent
  ▸ #2 9g5f1c · 1 task · 1 rejected · max_nodes_per_run
─────────────────────────────────────────────────────────────────────────────────────
  ● main        2/2   5h ▇▇▇▇▇▇▇░░░  71% ↻ 38m     7d  32%
  ◐ alt         1/-   5h ▇▇▇▇▇▇▇▇▇░  93% ↻ 12m     7d  54%
  ✘ codex-main  0/2   cooling until 23:20
─────────────────────────────────────────────────────────────────────────────────────
  9g5f09·2 → alt   score .41 = util .93×.50 + load .33×.30 + share .12×.15 − weight
                   .00 − idle .02
                   passed over (now): main at capacity (2/2) · codex-main cooling
                   until 23:20
                   attempt 1 9g5f08 on main: rate_limited (five_hour) after 41s

↑↓ select · k cancel · enter open · r raw · ←→ fold · ! stuck · ? keys · q quit
