src/ui/board/snapshots/swamp__ui__board__screens__pager_dispatch_60.snap
---
source: src/ui/board/screens.rs
expression: dispatch
---
dispatch #1 9g5f18 · run 9g5fav
────────────────────────────────────────────────────────────
dispatch 9g5f18  run 9g5fav  seq 1  open  caller brain  3m2…
5 tasks  waiting 2  running 2  ok 1  failed 0  cancelled 0 …

* 9g5f11  [mid ] add pagination to /users            runnin…
    attempt 1  9g5f01  anthropic/main    claude-so…  runnin…
* 9g5f12  [high] backfill the users index            runnin…
    attempt 1  9g5f08  anthropic/main    claude-op…  rate_l…
    attempt 2  9g5f09  anthropic/alt     claude-op…  runnin…
* 9g5f04  [mid ] rebuild the index                   blocke…
    blocked until 22:54: main at capacity, alt quota stop
      main: at capacity
      alt: quota stop
────────────────────────────────────────────────────────────
esc back · ↑↓ scroll · r raw · g G ends · q quit
